<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignWithParentIfMissing="true"
    android:background="@android:color/background_light"
    android:contextClickable="false"
    android:fitsSystemWindows="false"
    android:focusable="auto"
    android:gravity="center_horizontal"
    android:isScrollContainer="false"
    android:nestedScrollingEnabled="false"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawHorizontalTrack="false"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    android:visibility="visible"
    app:layout_scrollEffect="none"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/title" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:fontFamily="@font/robotoregular"
            android:text="@string/title_text"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/short_hand"
            android:layout_width="75dp"
            android:layout_height="67dp"
            android:layout_gravity="right"
            android:layout_marginTop="15sp"
            android:contentDescription="@string/short_hand"
            android:fitsSystemWindows="true"
            android:scaleType="fitEnd"
            android:src="@drawable/hand_short" />

        <ScrollView
            android:id="@+id/scroll_choice"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:fillViewport="false">

            <LinearLayout
                android:id="@+id/skroll_choice"
                android:layout_width="match_parent"
                android:layout_height="253dp"
                android:isScrollContainer="true"
                android:nestedScrollingEnabled="true"
                android:orientation="vertical"
                android:overScrollMode="ifContentScrolls"
                android:scrollIndicators="right"
                android:scrollbars="vertical">

                <LinearLayout
                    android:id="@+id/first_line"
                    android:layout_width="match_parent"
                    android:layout_height="132dp"
                    android:isScrollContainer="false"
                    android:orientation="horizontal"
                    android:scrollIndicators="right">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="152dp"
                        android:layout_height="112dp"
                        android:layout_marginLeft="15sp"
                        android:layout_marginTop="10sp"
                        android:layout_marginRight="15sp"
                        android:layout_marginBottom="15sp"
                        android:layout_weight="1"
                        android:fadeScrollbars="true"
                        android:isScrollContainer="true"
                        android:nestedScrollingEnabled="true"
                        android:overScrollMode="ifContentScrolls"
                        android:scrollIndicators="right"
                        android:scrollbarAlwaysDrawVerticalTrack="true"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical"
                        android:verticalScrollbarPosition="right"
                        app:srcCompat="@drawable/photo" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="142dp"
                        android:layout_height="102dp"
                        android:layout_marginTop="15sp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/web" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/second_line"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="15sp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/games" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="179dp"
                        android:layout_height="216dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/voice" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="59dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/music" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="wrap_content"
                        android:layout_height="123dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/inter_map" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/button3"
            android:layout_width="300sp"
            android:layout_height="64sp"
            android:layout_gravity="center"
            android:layout_marginTop="8sp"
            android:backgroundTint="@color/motorika_green"
            android:text="@string/choise"
            android:onClick="onClickButton1"
            android:textColor="@color/deep_black"
            app:toggleCheckedStateOnClick="false" />

        <Button
            android:id="@+id/button2"
            android:layout_width="300sp"
            android:layout_height="64sp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="8sp"
            android:backgroundTint="@color/light_green"
            android:text="@string/set_sign"
            android:textColor="@color/deep_black" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
